# TIPE

./: .gitignore  README.md  TIPE.opam  dune-project
lib/: canny.ml  circle_detection.ml  circle_detection_optimise.ml  dune  erosion.ml  erosion_optimise.ml  extract_data.ml  line_detection.ml
