(lang dune 3.4)

(name TIPE)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Oscar Lahaie")

(maintainers "Oscar Lahaie")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name TIPE)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune bimage)
 (tags
  (topics "to describe" your project)))
